--- a/iGMS/iGMS.csproj
+++ b/iGMS/iGMS.csproj
@@ -155,7 +155,9 @@
     <Compile Include="Controllers\PurchaseOrderController.cs" />
     <Compile Include="Controllers\ReceiptController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
+    <Compile Include="Controllers\RFIDController.cs" />
     <Compile Include="Controllers\RoleAdminController.cs" />
+    <Compile Include="Controllers\Root.cs" />
     <Compile Include="Controllers\SeasonController.cs" />
     <Compile Include="Controllers\SizeController.cs" />
     <Compile Include="Controllers\StallsController.cs" />
@@ -2322,6 +2324,7 @@
     <Content Include="Models\Model.edmx.diagram">
       <DependentUpon>Model.edmx</DependentUpon>
     </Content>
+    <None Include="Properties\PublishProfiles\IISProfile.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\DetailWareHouse.js" />
     <Content Include="Scripts\EditUser.js" />
@@ -2437,6 +2440,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\RFID\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
