--- a/iGMS/iGMS.csproj
+++ b/iGMS/iGMS.csproj
@@ -152,7 +152,6 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IndustryController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
-    <Compile Include="Controllers\MaterialController.cs" />
     <Compile Include="Controllers\PurchaseOrderController.cs" />
     <Compile Include="Controllers\ReceiptController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
@@ -164,6 +163,7 @@
     <Compile Include="Controllers\SizeController.cs" />
     <Compile Include="Controllers\StallsController.cs" />
     <Compile Include="Controllers\StoreController.cs" />
+    <Compile Include="Controllers\StyleController.cs" />
     <Compile Include="Controllers\SupplierController.cs" />
     <Compile Include="Controllers\SupplierGoodsController.cs" />
     <Compile Include="Controllers\UnitController.cs" />
@@ -182,6 +182,9 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Color.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Coo.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Customer.cs">
@@ -214,6 +217,9 @@
     <Compile Include="Models\EPC.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Gender.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\GeneralAccounting.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -230,9 +236,6 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\License.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Material.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Method.cs">
@@ -296,6 +299,9 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Store.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Style.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Supplier.cs">
@@ -2356,7 +2362,6 @@
     <Content Include="Scripts\Layout.js" />
     <Content Include="Scripts\ListUser.js" />
     <Content Include="Scripts\Login.js" />
-    <Content Include="Scripts\Material.js" />
     <Content Include="Scripts\md5.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\PurchaseOrder.js" />
@@ -2369,6 +2374,7 @@
     <Content Include="Scripts\Size.js" />
     <Content Include="Scripts\Stalls.js" />
     <Content Include="Scripts\Store.js" />
+    <Content Include="Scripts\Style.js" />
     <Content Include="Scripts\Supplier.js" />
     <Content Include="Scripts\SupplierGoods.js" />
     <Content Include="Scripts\Unit.js" />
@@ -2413,9 +2419,6 @@
     <Content Include="Views\Color\Index.cshtml" />
     <Content Include="Views\Color\Adds.cshtml" />
     <Content Include="Views\Color\Edits.cshtml" />
-    <Content Include="Views\Material\Index.cshtml" />
-    <Content Include="Views\Material\Adds.cshtml" />
-    <Content Include="Views\Material\Edits.cshtml" />
     <Content Include="Views\Season\Index.cshtml" />
     <Content Include="Views\Season\Adds.cshtml" />
     <Content Include="Views\Season\Edits.cshtml" />
@@ -2451,6 +2454,9 @@
     <Content Include="Views\SaleOrder\Index.cshtml" />
     <Content Include="Views\DetailWareHouse\Index2.cshtml" />
     <Content Include="Views\DetailWareHouse\List.cshtml" />
+    <Content Include="Views\Style\Index.cshtml" />
+    <Content Include="Views\Style\Adds.cshtml" />
+    <Content Include="Views\Style\Edits.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
